env tooltip - removed default max width to fix overflow issue

--- a/scopes/ui-foundation/uis/side-bar/component-tree/component-view/component-view.module.scss
+++ b/scopes/ui-foundation/uis/side-bar/component-tree/component-view/component-view.module.scss
@@ -75,6 +75,7 @@
 
 .componentEnvTooltip {
   font-size: var(--bit-p-xs);
+  max-width: unset !important;
   .componentEnvTitle {
     font-size: var(--bit-p-xxs, 12px);
     color: #c9c3f6;
